<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/txt_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:paddingLeft="@dimen/header_margin"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:text="@string/choose_menu"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_employee"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/add_employee"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_update_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/update_employee"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_delete_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/remove_employee"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_view_employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/view_all_employees"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_request"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_rest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_request2"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />
        android:textAllCaps="false" />
    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />
    android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textStyle="bold" />
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="bottom|center_horizontal"
        android:padding="7dp"
        android:paddingLeft="10dp"
        android:text="@string/contact"
        android:textSize="16sp"
        android:textStyle="bold"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"

        />

</LinearLayout>
